# spotify-liked-songs-sync

./: .env.example  Cargo.toml  README.md
src/: main.rs
